rollouts/blue-green/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: rollout-bluegreen-active
  labels:
    app: rollouts-example
spec:
  selector:
    app: rollouts-example
  ports:
  - port: 8080
    targetPort: 8080

---

apiVersion: v1
kind: Service
metadata:
  name: rollout-bluegreen-preview
  labels:
    app: rollouts-example
spec:
  selector:
    app: rollouts-example
  ports:
  - port: 8080
    targetPort: 8080
